# ytdl7000

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
ytdl7000/: __init__.py  chromium_ext_creator.py  utils.py
ytdl7000/_data/: popup.html  scripts.js
ytdl7000/_data/_ext/: popup.html  scripts.js  service_worker.js  translations.js
